<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pogorzelskimarcin.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/menuLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/menuLabelText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnDodajPolow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDodajPolowText"
            android:onClick="DodajPolow" />

        <Button
            android:id="@+id/btnZaznaczMiejsce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnZaznaczMiejsceText" 
            android:onClick="ZaznaczMiejsce"/>

        <Button
            android:id="@+id/btnHistoriaPolowow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnHistoriaPolowowText" 
            android:onClick="ListaPolowow"/>

        <Button
            android:id="@+id/btnListaMiejsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListaMiejscText"
            android:onClick="ListaMiejsc" />

    </LinearLayout>

</RelativeLayout>
