<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pogorzelskimarcin.DodajPolowActivity$PlaceholderFragment" >

       <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblDodajPolow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lblDodajPolowText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextWpiszGatunek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextWpiszGatunekHint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextWpiszDlugosc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextWpiszDlugoscHint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextWpiszWage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextWpiszWageHint"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnDodaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDodajText"
            android:onClick="DodajPolowDoListy"
             />

    </LinearLayout>

</RelativeLayout>
